Last Version Of Project
26.03.2015

--- a/EmguCVFace/Form1.resx
+++ b/EmguCVFace/Form1.resx
@@ -121,6 +121,31 @@
     <value>17, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>152</value>
+    <value>27</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAgAAGAIAAjACAAOoAgAD2AIAA9gCAAPYAgAD2AIAA9gCAAPYAgAD2AIAA9gCAAPYAgAD2AIAA6gCA
+        AIwAgAAGAIAAiACAAP8AgAD/AIAA/wCAAP8AgAD/AIAA/wCAAP8AgAD/AIAA/wCAAP8AgAD/AIAA/wCA
+        AP8AgAD/AIAAigCAAOQAgAD/AIAA/wCAAP8AgAD/AIAA/wCAAP8AgAD/AIAA/wCAAP8AgAD/AIAA/wCA
+        AP8AgAD/AIAA/wCAAOYAgADyAIAA/wCAAP8AgAD/AIAA/wCAAP8AgADsAIAAtgCAALYAgADsAIAA/wCA
+        AP8AgAD/AIAA/wCAAP8AgADyAIAA9ACAAP8AgAD/AIAA/wCAAPwAgAB+AIAACACAAAAAAAAAAIAACACA
+        AH4AgAD8AIAA/wCAAP8AgAD/AIAA9gCAAPYAgAD/AIAA/wCAAP8AgACCAIAABgCAAJAAgADuAIAA8ACA
+        AJIAgAAGAIAAgACAAP8AgAD/AIAA/wCAAPYAgAD2AIAA/wCAAP8AgADwAIAACgCAAI4AgAD/AIAA/wCA
+        AP8AgAD/AIAAjgCAAAgAgADwAIAA/wCAAP8AgAD2AIAA9gCAAP8AgAD/AIAAvgAAAAAAgADmAIAApgCA
+        ALoAgAD/AIAA/wCAAOoAAAAAAIAAvACAAP8AgAD/AIAA9gCAAPYAgAD/AIAA/wCAAMAAAAAAAIAAcgAA
+        AAAAgAAAAIAAvgCAAP8AgADmAAAAAACAAL4AgAD/AIAA/wCAAPYAgAD2AIAA/wCAAP8AgADyAIAADACA
+        AAoAAAAAAAAAAACAALIAgAD/AIAAhgCAAAwAgADyAIAA/wCAAP8AgAD2AIAA9gCAAP8AgAD/AIAA/wCA
+        AIwAAAAAAIAADACAAHgAgADgAIAAggCAAAQAgACMAIAA/wCAAP8AgAD/AIAA9gCAAPQAgAD/AIAA/wCA
+        AP8AgAD/AIAAjgCAAA4AAAAAAAAAAACAAA4AgACOAIAA/wCAAP8AgAD/AIAA/wCAAPYAgADyAIAA/wCA
+        AP8AgAD/AIAA/wCAAP8AgAD0AIAAxACAAMYAgAD0AIAA/wCAAP8AgAD/AIAA/wCAAP8AgADyAIAA4gCA
+        AP8AgAD/AIAA/wCAAP8AgAD/AIAA/wCAAP8AgAD/AIAA/wCAAP8AgAD/AIAA/wCAAP8AgAD/AIAA4gCA
+        AH4AgAD/AIAA/wCAAP8AgAD/AIAA/wCAAP8AgAD/AIAA/wCAAP8AgAD/AIAA/wCAAP8AgAD/AIAA/wCA
+        AIAAgAACAIAAfACAANwAgADqAIAA7ACAAOwAgADsAIAA7gCAAO4AgADuAIAA7gCAAO4AgADsAIAA3ACA
+        AHwAgAACgAEAAAAAAAAAAAAAAAAAAAfgAAAEIAAACBAAAAgQAAAPEAAADxAAAAcgAAADwAAAAAAAAAAA
+        AACAAAAAwAMAAA==
+</value>
+  </data>
 </root>
