--- a/EmguCVFace/Properties/Resources.resx
+++ b/EmguCVFace/Properties/Resources.resx
@@ -118,8 +118,8 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="backgorund4 [1159_605]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\backgorund4 [1159_605].jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="backgorund4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\backgorund4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="backgorund2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\backgorund2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -133,13 +133,16 @@
   <data name="backgorund [1159_605]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\backgorund [1159_605].jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="backgorund4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\backgorund4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="backgorund5 [1159_605]" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\backgorund5 [1159_605].jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="backgorund4 [1159_605]" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\backgorund4 [1159_605].jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="backgorund3 [1159_605]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\backgorund3 [1159_605].jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="backgorund5 [1159_605]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\backgorund5 [1159_605].jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="271-abstract-colors-background-800x600" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\271-abstract-colors-background-800x600.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
